--- a/WellDoneItXamFresh/WellDoneItXamFresh/WellDoneItXamFresh/WellDoneItXamFresh.csproj
+++ b/WellDoneItXamFresh/WellDoneItXamFresh/WellDoneItXamFresh/WellDoneItXamFresh.csproj
@@ -39,10 +39,14 @@
     <Compile Include="Helpers\Settings.cs" />
     <Compile Include="Models\WellDoneItTask.cs" />
     <Compile Include="PageModels\InboxPageModel.cs" />
+    <Compile Include="PageModels\LoginPageModel.cs" />
     <Compile Include="PageModels\TaskPageModel.cs" />
     <Compile Include="PageModels\TodayPageModel.cs" />
     <Compile Include="Pages\InboxPage.xaml.cs">
       <DependentUpon>InboxPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\LoginPage.xaml.cs">
+      <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\TodayPage.xaml.cs">
       <DependentUpon>TodayPage.xaml</DependentUpon>
@@ -144,6 +148,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Pages\TodayPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\LoginPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
