--- a/WellDoneItXamFresh/WellDoneItXamFresh/WellDoneItXamFresh/WellDoneItXamFresh.csproj
+++ b/WellDoneItXamFresh/WellDoneItXamFresh/WellDoneItXamFresh/WellDoneItXamFresh.csproj
@@ -36,10 +36,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="Converters\InverseBooleanConverter.cs" />
     <Compile Include="Helpers\Settings.cs" />
     <Compile Include="Models\WellDoneItTask.cs" />
     <Compile Include="PageModels\InboxPageModel.cs" />
     <Compile Include="PageModels\LoginPageModel.cs" />
+    <Compile Include="PageModels\SettingsPageModel.cs" />
     <Compile Include="PageModels\TaskPageModel.cs" />
     <Compile Include="PageModels\TodayPageModel.cs" />
     <Compile Include="Pages\InboxPage.xaml.cs">
@@ -47,6 +49,9 @@
     </Compile>
     <Compile Include="Pages\LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\SettingsPage.xaml.cs">
+      <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\TodayPage.xaml.cs">
       <DependentUpon>TodayPage.xaml</DependentUpon>
@@ -154,6 +159,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Pages\LoginPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\SettingsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
