--- a/WellDoneItXamFresh/WellDoneItXamFresh/WellDoneItXamFresh.iOS/WellDoneItXamFresh.iOS.csproj
+++ b/WellDoneItXamFresh/WellDoneItXamFresh/WellDoneItXamFresh.iOS/WellDoneItXamFresh.iOS.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Helpers\Settings.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="Renderers\StandardViewCellRenderer.cs" />
     <None Include="app.config" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
