--- a/WellDoneItXamFresh/WellDoneItXamFresh/WellDoneItXamFresh.iOS/Info.plist
+++ b/WellDoneItXamFresh/WellDoneItXamFresh/WellDoneItXamFresh.iOS/Info.plist
@@ -23,7 +23,7 @@
 	<key>MinimumOSVersion</key>
 	<string>6.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>Well Done It</string>
+	<string>WellDoneItXamFresh</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.yourcompany.WellDoneItXamFresh</string>
 	<key>CFBundleVersion</key>
@@ -47,5 +47,7 @@
 	<string>LaunchScreen</string>
 	<key>CFBundleShortVersionString</key>
 	<string></string>
+	<key>CFBundleName</key>
+	<string>WellDoneItXamFresh</string>
 </dict>
 </plist>
